.helm/adhoc/ingress-main.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: siibra-explorer-main-ingress
  labels:
    name: siibra-explorer-main-ingress
  annotations:
    nginx.ingress.kubernetes.io/app-root: "/viewer"
spec:
  ingressClassName: nginx
  rules:
  - host: siibra-explorer.apps.ebrains.eu
    http:
      paths:
      - pathType: Prefix
        path: "/viewer"
        backend:
          service:
            name: prod-siibra-explorer
            port: 
              number: 8080
      - pathType: Prefix
        path: "/viewer-cdn"
        backend:
          service:
            name: prod-cdn-siibra-explorer
            port: 
              number: 8080
      - pathType: Prefix
        path: "/viewer-staging"
        backend:
          service:
            name: rc-siibra-explorer
            port: 
              number: 8080
      - pathType: Prefix
        path: "/viewer-dev"
        backend:
          service:
            name: dev-siibra-explorer
            port: 
              number: 8080
  - host: atlases.ebrains.eu
    http:
      paths:
      - pathType: Prefix
        path: "/viewer"
        backend:
          service:
            name: prod-siibra-explorer
            port: 
              number: 8080
      - pathType: Prefix
        path: "/viewer-cdn"
        backend:
          service:
            name: prod-cdn-siibra-explorer
            port: 
              number: 8080
      - pathType: Prefix
        path: "/viewer-staging"
        backend:
          service:
            name: rc-siibra-explorer
            port: 
              number: 8080
      - pathType: Prefix
        path: "/viewer-dev"
        backend:
          service:
            name: dev-siibra-explorer
            port: 
              number: 8080
  tls:
  - secretName: sxplr-ebrains-secret
    hosts:
    - siibra-explorer.apps.ebrains.eu
  - secretName: atlases-ebrains-secret
    hosts:
    - atlases.ebrains.eu
